Bug 452980 - "Screen is being recorded" Tray icon isn't appearing anymore
Summary: "Screen is being recorded" Tray icon isn't appearing anymore
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.24.4
Platform: Other Other
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-04-25 09:20 UTC by Andrea Ippolito
Modified: 2022-05-13 15:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.6
Sentry Crash Report:


Attachments
Screenshot on Win10 OBS recording full screen (546.71 KB, image/png)
2022-04-25 09:20 UTC, Andrea Ippolito
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Ippolito 2022-04-25 09:20:36 UTC
Created attachment 148349 [details]
Screenshot on Win10 OBS recording full screen

SUMMARY
-- This is a feature request, not a bug --
During meetings and remote control sessions it can be crucial for the person sharing their screen (or application window) to have a clear visual indicator that their screen/window is not for their eyes only during that time.
Windows does this, in my experience, by adding a solid, vivid colored border around the screen or app window being shared (refer to screenshot attached).
I think this is a good implementation because it does not rely on small tray icons which can be easy to miss, hence constantly reminding the user that they're operating in a potentially "unsafe" situation.

STEPS TO REPRODUCE
1. Start a KDE session under Wayland
2. Screen share on Teamviewer, or start a recording via OBS, or share screen over MS Teams or Google Meet

OBSERVED RESULT
No visual indication of screen/app window being recorded/shared

EXPECTED RESULT
Clear, hard to miss visual indication of screen/app window being recorded/shared

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.24.4

ADDITIONAL INFORMATION
Requesting for Wayland as that's my daily driver - might make sense on X11 as well, if not implemented yet.

Thanks!
Comment 1 Nate Graham 2022-04-25 17:41:26 UTC
We have this already on Wayland, where there is a central interface we can listen on to know that it's happening. The indicator appears in the System Tray. But on X11 no such standardized interface exists or can exist, so unfortunately it can't be done there. It has to be Wayland-only. That's one of the benefits of Wayland. :)
Comment 2 Andrea Ippolito 2022-05-08 08:09:41 UTC
(In reply to Nate Graham from comment #1)
> We have this already on Wayland, where there is a central interface we can
> listen on to know that it's happening. The indicator appears in the System
> Tray. But on X11 no such standardized interface exists or can exist, so
> unfortunately it can't be done there. It has to be Wayland-only. That's one
> of the benefits of Wayland. :)

Hello Nate,

thanks for your reply. I have tested with OBS on KDE Wayland (Plasma 5.24.5), but the only indicator I see is a red dot overlaid on the OBS tray icon, which IMO is not a lot.

Has KDE ever considered something more striking? This is quite a sensitive topic IMO, especially for contents being shared live. One can easily abort a screen recording and start anew if something private/confidential has been accidentally recorded, but it's not the case with Teams or Google Meet screen shares, for example, and having a thick red border around windows (or the entire screen) is a better way to provide an immediate feedback/red flag to the user, especially in an enterprise environment.

Thanks.
Comment 3 Nate Graham 2022-05-09 15:51:13 UTC
Ok, I just tried this and you're right: other than OBS's own tray icon, there is nothing in the System Tray from the system to show that something is recording the screen. There *used to be*, which is why I think we were confusing each other. So it must have gotten broken somehow.
Comment 4 Aleix Pol 2022-05-13 14:49:45 UTC
It turns out it was there all along, just hidden in the extended view.

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/96
Comment 5 Aleix Pol 2022-05-13 15:11:25 UTC
Git commit 3d61dae1fa334a9f3dadc505a038f75aa5846588 by Aleix Pol.
Committed on 13/05/2022 at 14:47.
Pushed by ngraham into branch 'master'.

screenshare: Show the screen sharing notifier more prominently

Sets it as active, otherwise it got buried in the extended view of the
system tray.

M  +1    -0    src/waylandintegration.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/3d61dae1fa334a9f3dadc505a038f75aa5846588
Comment 6 Nate Graham 2022-05-13 15:11:49 UTC
Git commit bbff465e6a005c737ee2e53eb5e072da006d9b4b by Nate Graham, on behalf of Aleix Pol.
Committed on 13/05/2022 at 15:11.
Pushed by ngraham into branch 'Plasma/5.24'.

screenshare: Show the screen sharing notifier more prominently

Sets it as active, otherwise it got buried in the extended view of the
system tray.


(cherry picked from commit 3d61dae1fa334a9f3dadc505a038f75aa5846588)

M  +1    -0    src/waylandintegration.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/bbff465e6a005c737ee2e53eb5e072da006d9b4b