screenshare: Show the screen sharing notifier more prominently

Sets it as active, otherwise it got buried in the extended view of the
system tray.

BUG: 452980